--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,6 +13,11 @@
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
   </p>
-  
+
   <button ion-button secondary menuToggle>Toggle Menu</button>
+
+  <button ion-button>Neuer Eintrag</button>
+  <button ion-button>Statistik</button>
+  <button ion-button>Pollenprognose</button>
+  <button ion-button>Community</button>
 </ion-content>
