Add Button Game

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,4 +13,7 @@
    Pollenprognose</button>
   <button ion-button block (click)="pushCommunityPage()">
     Community</button>
+    Community</button>
+    <button ion-button block (click)="pushGamePage()">
+      Game</button>
 </ion-content>
