--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,4 +15,6 @@
     Community</button>
     <button ion-button block (click)="pushGamePage()">
       Game</button>
+    <button ion-button block (click)="pushIntroductionPage()">
+        Einführung</button>
 </ion-content>
