Page Introduction modified

--- a/src/pages/introduction/introduction.html
+++ b/src/pages/introduction/introduction.html
@@ -1,10 +1,24 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Einführung</ion-title>
+    <ion-title>Registration</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-    <button ion-button block>
-      Test</button>
-</ion-content>
+  <p>
+    <ion-card>
+  <img src="img/nin-live.png"/>
+  <ion-card-content>
+    <ion-card-title>
+      Hallo Tim
+      </ion-card-title>
+    <p>
+      Ich bin Dr. Ally, vielen Dank, dass Du mir mit deinem Beitrag hilfst, Allergien zu untersuchen.
+      Lass uns kurz deine Persönichen Einstellungen speichern.
+    </p>
+  </ion-card-content>
+</ion-card>
+  </p>
+
+
+  <button ion-button (click)="pushRewardPage()">weiter</button>
