--- a/src/pages/newEntry/tips/tips.html
+++ b/src/pages/newEntry/tips/tips.html
@@ -6,7 +6,7 @@
 
 <ion-content padding>
 
-  <button id="btnX" ion-button color="light" round icon-only>
+  <button id="btnX" (click)="pushHomePage()" ion-button color="light" round icon-only>
     <ion-icon name='close'></ion-icon>
   </button>
 
@@ -20,6 +20,6 @@
          <p>Halte dich wenig draussen auf.</p>
          <p>Wasche dir täglich die Haare.</p>
 
-    <button id="btnForward" ion-button secondary>Weiter</button>
+    <button id="btnForward" (click)="pushHomePage()" ion-button secondary>Eintrag bestätigen</button>
 
 </ion-content>
