--- a/src/pages/newEntry/totalPoints/totalPoints.html
+++ b/src/pages/newEntry/totalPoints/totalPoints.html
@@ -6,7 +6,7 @@
 
 <ion-content padding>
 
-  <button id="btnX" ion-button color="light" round icon-only>
+  <button id="btnX" (click)="pushHomePage()" ion-button color="light" round icon-only>
     <ion-icon name='close'></ion-icon>
   </button>
 
@@ -16,6 +16,6 @@
 
   <p>Vielen Dank! Du hast soeben einen Punkt erhalten. :)</p>
 
-  <button id="btnForward" ion-button secondary>Weiter</button>
+  <button id="btnForward" (click)="pushAdditionalRewardPage()" ion-button secondary>Weiter</button>
 
 </ion-content>
