--- a/src/pages/newEntry/additionalReward/additionalReward.html
+++ b/src/pages/newEntry/additionalReward/additionalReward.html
@@ -6,7 +6,7 @@
 
 <ion-content padding>
 
-  <button id="btnX" ion-button color="light" round icon-only>
+  <button id="btnX" (click)="pushHomePage()" ion-button color="light" round icon-only>
     <ion-icon name='close'></ion-icon>
   </button>
 
@@ -16,6 +16,6 @@
 
   <p>Öffne eine Truhe und hole dir zusätzliche Punkte und einen Tipp.</p>
 
-  <button id="btnForward" ion-button secondary>Weiter</button>
+  <button id="btnForward" (click)="pushTipsPage()" ion-button secondary>Weiter</button>
 
 </ion-content>
