--- a/src/pages/newEntry/physicalActivity/physicalActivity.html
+++ b/src/pages/newEntry/physicalActivity/physicalActivity.html
@@ -6,7 +6,7 @@
 
 <ion-content padding>
 
-  <button id="btnX" ion-button color="light" round icon-only>
+  <button id="btnX" ion-button (click)="pushHomePage()" color="light" round icon-only>
     <ion-icon name='close'></ion-icon>
   </button>
 
@@ -23,6 +23,6 @@
     </ion-range>
   </ion-item>
 
-  <button id="btnForward" ion-button secondary>Weiter</button>
+  <button id="btnForward" (click)="pushMedicationPage()" ion-button secondary>Weiter</button>
 
 </ion-content>
