DateTime und newEntry modified

--- a/src/pages/newEntry/dateTime/dateTime.html
+++ b/src/pages/newEntry/dateTime/dateTime.html
@@ -19,7 +19,7 @@
       <ion-item>
         <ion-label>Datum und Zeit</ion-label>
         <!--set default time now-->
-        <ion-datetime displayFormat="DD MMM, HH:mm" [(ngModel)]="myDate"></ion-datetime>
+        <ion-datetime displayFormat="DD MMM, HH:mm" [(ngModel)]="date"></ion-datetime>
       </ion-item>
 
       <button id="btnForward" (click)="pushComplaintsPage()" ion-button secondary>Weiter</button>
