--- a/src/pages/newEntry/newEntry.html
+++ b/src/pages/newEntry/newEntry.html
@@ -21,6 +21,17 @@
          aktuelle Pollenbelastung in
          der Schweiz zu erhalten.</p>
 
-  <button id="btnForward" (click)="pushDateTimePage()" ion-button secondary>Weiter</button>
+  <button (click)="pushHomePage()" ion-button secondary icon-left>
+    <ion-icon name='close'></ion-icon>Abbrechen
+  </button>
+  <button (click)="pushDateTimePage()" ion-button icon-right secondary>Weiter
+    <ion-icon name="ios-arrow-forward"></ion-icon>
+  </button>
+
+
+
+
+
+
 
 </ion-content>
