--- a/src/pages/game/false1/false1.html
+++ b/src/pages/game/false1/false1.html
@@ -15,8 +15,9 @@
     <ion-col>
       <div>
         <p>Leider ist diese Antwort falsch!</p>
-        <p>Die Richtige Antwort ist: Screen 1!</p>
+        <p>Die Richtige Antwort ist: Antihistaminika!</p>
         <button ion-button (click)="onClick()">Weiter</button>
+        <button ion-button>Abbrechen</button>
       </div>
     </ion-col>
   </ion-row>
