--- a/src/pages/game/question3/question3.html
+++ b/src/pages/game/question3/question3.html
@@ -23,15 +23,15 @@
 
     <ion-list radio-group>
       <ion-item>
-        <ion-label>Strauss, Brike, Buche</ion-label>
+        <ion-label>Pappel, Weide, Birke, Eiche, Buche</ion-label>
         <ion-radio checked="false" value="answer1" #answer1 (ionSelect)="onSelect(answer1)"></ion-radio>
       </ion-item>
       <ion-item>
-        <ion-label>Tanne, Birke, Eiche, Buche</ion-label>
+        <ion-label>Tanne, Weide, Birke, Eiche, Buche</ion-label>
         <ion-radio checked="false" value="answer2" #answer2 (ionSelect)="onSelect(answer2)"></ion-radio>
       </ion-item>
       <ion-item>
-        <ion-label>Kräuter, Weide, Birke, Eiche</ion-label>
+        <ion-label>Kräuter, Weide, Birke, Eiche, Buche</ion-label>
         <ion-radio checked="false" value="answer3" #answer3 (ionSelect)="onSelect(answer3)"></ion-radio>
       </ion-item>
     </ion-list>
