--- a/src/pages/game/right1/right1.html
+++ b/src/pages/game/right1/right1.html
@@ -16,6 +16,8 @@
       <div>
         <p>Super Tim!</p>
         <p>Deine Antwort war korrekt - weiter so!</p>
+        <p>Du hast zwei Punkte erzielt.</p>
+          <button ion-button (click)="onClick()">Abbrechen</button>
         <button ion-button (click)="onClick()">Weiter</button>
       </div>
     </ion-col>
