--- a/src/pages/introduction/job/job.html
+++ b/src/pages/introduction/job/job.html
@@ -1,13 +1,13 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Beruf & Arbeitsort</ion-title>
+    <ion-title>Einführung</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
   <p>
     <ion-card>
-  <img src="img/nin-live.png"/>
+  <img class="full-image" src="assets/img/AllyAchtung.png"/>
   <ion-card-content>
     <ion-card-title>
       </ion-card-title>
@@ -22,10 +22,10 @@
     <ion-select [(ngModel)]="berufe">
       <ion-option>Bauer</ion-option>
       <ion-option>Büroangestellter</ion-option>
-      <ion-option>Zimmermann</ion-option>
       <ion-option>Lokführer</ion-option>
       <ion-option>Medizininformatiker</ion-option>
       <ion-option>Physiotherapeut</ion-option>
+      <ion-option>Zimmermann</ion-option>
     </ion-select>
   </ion-item>
   <ion-item>
