--- a/src/pages/introduction/reward/reward.html
+++ b/src/pages/introduction/reward/reward.html
@@ -1,16 +1,16 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Belohnung</ion-title>
+    <ion-title>Einführung</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
   <p>
     <ion-card>
-  <img src="img/nin-live.png"/>
+  <img class="full-image" src="assets/img/AllyAchtung.png"/>
   <ion-card-content>
     <p>
-  Wähle Deine Belohnung für die Teilnahme für die Erfassung Deiner Allergie aus
+  Du kannst mit Deinen Einträgen Punkte sammeln und Dir so eine Belohnung holen. Wähle eine der folgenden aus:
     </p>
   </ion-card-content>
 </ion-card>
