--- a/src/pages/introduction/finish/finish.html
+++ b/src/pages/introduction/finish/finish.html
@@ -1,19 +1,20 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Abschluss Registration</ion-title>
+    <ion-title>Einführung</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
   <p>
     <ion-card>
-  <img src="img/nin-live.png"/>
+<img class="full-image" src="assets/img/AllySuper.png"/>
   <ion-card-content>
     <h5>Geschafft!</h5>
       <p>Jetzt kannst Du die App nutzen!</p>
       <p>Viel Spass und ich freue mich auf deine Einträge!</p>
-      <p>Übrigens, jederzeit kannst Du in den Einstellungen
-         deine Anpassungen vornehmen</p>
   </ion-card-content>
 </ion-card>
   </p>
+
+
+<button ion-button (click)="push()">Abschliessen</button>
