--- a/src/pages/introduction/introduction.html
+++ b/src/pages/introduction/introduction.html
@@ -1,20 +1,21 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Registration</ion-title>
+    <ion-title>Einführung</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
   <p>
     <ion-card>
-  <img src="img/nin-live.png"/>
-  <ion-card-content>
+
+  <img class="full-image" src="assets/img/AllyNormal.png"/>
+  <ion-card-content >
     <ion-card-title>
       Hallo Tim
       </ion-card-title>
     <p>
-      Ich bin Dr. Ally, vielen Dank, dass Du mir mit deinem Beitrag hilfst, Allergien zu untersuchen.
-      Lass uns kurz deine Persönichen Einstellungen speichern.
+      Ich bin Dr. Ally, vielen Dank, dass Du mir mit Deinem Beitrag hilfst, Allergien zu untersuchen.
+      Lass uns kurz Deine persönlichen Einstellungen zu speichern.
     </p>
   </ion-card-content>
 </ion-card>
