--- a/src/pages/introduction/remindertime/remindertime.html
+++ b/src/pages/introduction/remindertime/remindertime.html
@@ -1,13 +1,13 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Dosierung der Medikamente</ion-title>
+    <ion-title>Einführung</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
   <p>
     <ion-card>
-  <img src="img/nin-live.png"/>
+<img class="full-image" src="assets/img/AllyAchtung.png"/>
   <ion-card-content>
     <p>
 Ich bin da, um Dir zu helfen, Deine täglichen Einträge zu erfassen
@@ -18,7 +18,7 @@ Ich bin da, um Dir zu helfen, Deine täglichen Einträge zu erfassen
   </p>
   <ion-item>
        <ion-label>Zeit</ion-label>
-       <ion-datetime displayFormat="HH:mm" [(ngModel)]="myDate"></ion-datetime>
+       <ion-datetime displayFormat="HH:mm" [(ngModel)]="date"></ion-datetime>
      </ion-item>
 
        <button ion-button (click)="pushFinishPage()">weiter</button>
