--- a/src/pages/game/right1/right1.html
+++ b/src/pages/game/right1/right1.html
@@ -14,7 +14,7 @@
   
     <ion-col>
       <div>
-        <p>Super Tim!</p>
+        <p>Super Timi!</p>
         <p>Deine Antwort war korrekt - weiter so!</p>
         <p>Du hast zwei Punkte erzielt.</p>
           <button ion-button (click)="onClick()">Abbrechen</button>
