--- a/src/pages/newEntry/newEntry.html
+++ b/src/pages/newEntry/newEntry.html
@@ -21,6 +21,8 @@
          aktuelle Pollenbelastung in
          der Schweiz zu erhalten.</p>
 
+         <p>test</p>
+
   <button (click)="pushHomePage()" ion-button secondary icon-left>
     <ion-icon name='close'></ion-icon>Abbrechen
   </button>
