--- a/src/pages/newEntry/medication/medication.html
+++ b/src/pages/newEntry/medication/medication.html
@@ -54,11 +54,12 @@
           </ion-item>
         </ion-list>
 
-        
+
         <button (click)="pushHomePage()" ion-button secondary icon-left>
           <ion-icon name='close'></ion-icon>Abbrechen
         </button>
         <button (click)="pushTotalPointsPage()" ion-button icon-right secondary>Weiter
           <ion-icon name="ios-arrow-forward"></ion-icon>
+        </button>
 
 </ion-content>
