--- a/src/pages/introduction/finish/finish.html
+++ b/src/pages/introduction/finish/finish.html
@@ -11,7 +11,7 @@
   <ion-card-content>
     <h5>Geschafft!</h5>
       <p>Jetzt kannst Du die App nutzen!</p>
-      <p>Viel Spass und ich freue mich auf deine Einträge Tim!</p>
+      <p>Viel Spass und ich freue mich auf Deine Einträge!</p>
   </ion-card-content>
 </ion-card>
   </p>
