--- a/src/pages/game/game.html
+++ b/src/pages/game/game.html
@@ -6,30 +6,21 @@
 
 <ion-content padding>
 
+  <ion-card>
+    <img class="full-image" src="assets/img/AllyAchtung.png" />
+    <ion-card-content>
 
-  <ion-col>
-    <div>
-      <ion-col>
-      </ion-col>
-      <ion-col>
-        <img class="ally" src="assets/imgs/Ally-M.jpg" style="float:right;" alt="Lights" style="width:30%;max-width:400px">
-      </ion-col>
-    </div>
-  </ion-col>
+      <ion-row>
+        <h2>Hallo Tim</h2>
+      </ion-row>
+      <p>&nbsp;</p>
+      <ion-row>
+        <h5>Mit den Lernfragen zu Allergien kannst du Dein Wissen verbessern und so zusätzliche Punkte gewinnen.</h5>
+      </ion-row>
 
+    </ion-card-content>
+  </ion-card>
 
-
-  <ion-row padding="50">
-    <h2>Hallo Tim</h2>
-  </ion-row>
-  <ion-row>
-    <h5>Mit den Lernfragen zu Allergien kannst du Dein Wissen verbessern und so zusätzliche Punkte gewinnen.</h5>
-  </ion-row>
-
-  <div>
-    <ion-row>
-      <button ion-button (click)="onNext1()">Zum Spiel</button>
-    </ion-row>
-  </div>
+  <button ion-button (click)="onNext1()">Zum Spiel</button>
 
 </ion-content>
