--- a/src/pages/game/question1/question1.html
+++ b/src/pages/game/question1/question1.html
@@ -1,5 +1,10 @@
-<ion-content padding>
+<ion-header>
+  <ion-navbar>
+    <ion-title>Quiz</ion-title>
+  </ion-navbar>
+</ion-header>
 
+<ion-content padding>
 
   <ion-card>
     <img class="full-image" src="assets/img/AllyAchtung.png" />
