--- a/src/pages/newEntry/physicalActivity/physicalActivity.html
+++ b/src/pages/newEntry/physicalActivity/physicalActivity.html
@@ -23,6 +23,10 @@
     </ion-range>
   </ion-item>
 
-  <button id="btnForward" (click)="pushMedicationPage()" ion-button secondary>Weiter</button>
-
+  <button (click)="pushHomePage()" ion-button secondary icon-left>
+    <ion-icon name='close'></ion-icon>Abbrechen
+  </button>
+  <button (click)="pushMedicationPage()" ion-button icon-right secondary>Weiter
+    <ion-icon name="ios-arrow-forward"></ion-icon>
+  </button>
 </ion-content>
