--- a/src/pages/newEntry/totalPoints/totalPoints.html
+++ b/src/pages/newEntry/totalPoints/totalPoints.html
@@ -16,6 +16,11 @@
 
   <p>Vielen Dank! Du hast soeben einen Punkt erhalten. :)</p>
 
-  <button id="btnForward" (click)="pushAdditionalRewardPage()" ion-button secondary>Weiter</button>
+  <button (click)="pushHomePage()" ion-button secondary icon-left>
+    <ion-icon name='close'></ion-icon>Abbrechen
+  </button>
+  <button (click)="pushAdditionalRewardPage()" ion-button icon-right secondary>Weiter
+    <ion-icon name="ios-arrow-forward"></ion-icon>
+  </button>
 
 </ion-content>
