--- a/src/pages/newEntry/additionalReward/additionalReward.html
+++ b/src/pages/newEntry/additionalReward/additionalReward.html
@@ -10,10 +10,8 @@
     <ion-icon name='close'></ion-icon>
   </button>
 
-  <ion-item>
-        <!-- img id="imgAlly" align="middle" src="assets/img/ally.jpg" style="width:150px;height:200px;"-->
-    </ion-item>
 
+<!--this page will be deleted-->
   <p>Öffne eine Truhe und hole dir zusätzliche Punkte und einen Tipp.</p>
 
   <button (click)="pushHomePage()" ion-button secondary icon-left>
