--- a/src/pages/newEntry/totalPoints/totalPoints.html
+++ b/src/pages/newEntry/totalPoints/totalPoints.html
@@ -10,16 +10,20 @@
     <ion-icon name='close'></ion-icon>
   </button>
 
-  <ion-item>
-        <!-- img id="imgAlly" align="middle" src="assets/img/ally.jpg" style="width:150px;height:200px;"-->
-    </ion-item>
 
-  <p>Vielen Dank! Du hast soeben einen Punkt erhalten. :)</p>
+
+  <p>Vielen Dank! Du hast soeben einen Punkt erhalten.</p>
+
+  <p>Ich habe deine Daten analysiert. Deine Beschwerden entsprechen
+         am ehesten einer Gräserpollenallergie!</p>
+
+
+  <p>Öffne eine Truhe und hole dir zusätzliche Punkte und einen Tipp.</p>
 
   <button (click)="pushHomePage()" ion-button secondary icon-left>
     <ion-icon name='close'></ion-icon>Abbrechen
   </button>
-  <button (click)="pushAdditionalRewardPage()" ion-button icon-right secondary>Weiter
+  <button (click)="pushTipsPage()" ion-button icon-right secondary>Weiter
     <ion-icon name="ios-arrow-forward"></ion-icon>
   </button>
 
